liao/manifests/oidc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dani
---
apiVersion: v1
kind: Namespace
metadata:
  name: leon
