liao/manifests/external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  labels:
    app.kubernetes.io/name: external-dns
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: squat/external-dns-arm64:latest
        args:
        - --source=service
        - --domain-filter=squat.ai
        - --provider=cloudflare
        - --publish-internal-services
        - --log-level=info
        resources:
          limits:
            cpu: 250m
