liao/manifests/kube-router.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-router
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kube-router
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-router
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-router
    spec:
      serviceAccountName: kube-router
      priorityClassName: system-node-critical
      containers:
      - name: kube-router
        image: cloudnativelabs/kube-router
        args:
        - --run-router=false
        - --run-firewall=true
        - --run-service-proxy=false
        securityContext:
          privileged: true
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 20244
          initialDelaySeconds: 10
          periodSeconds: 3
        volumeMounts:
        - name: lib-modules
          mountPath: /lib/modules
          readOnly: true
        - name: xtables-lock
          mountPath: /run/xtables.lock
          readOnly: false
      hostNetwork: true
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/not-ready
        operator: Exists
      volumes:
      - name: lib-modules
        hostPath:
          path: /lib/modules
      - name: xtables-lock
        hostPath:
          path: /run/xtables.lock
          type: FileOrCreate
