liao/manifests/adjacency.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: adjacency
  name: adjacency
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: adjacency
  ports:
    - name: http
      protocol: TCP
      port: 8080
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/name: adjacency
  name: adjacency
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: adjacency
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adjacency
    spec:
      containers:
      - name: adjacency
        image: heptoprint/adjacency
        args:
        - --listen-address=:8080
        - --srv=_http._tcp.adjacency
        ports:
        - name: http
          containerPort: 8080
