liao/manifests/dashboard.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dashboard.k.squat.ai
  labels:
    app.kubernetes.io/name: kubernetes-dashboard
  name: kubernetes-dashboard
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: kubernetes-dashboard
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app.kubernetes.io/name: kubernetes-dashboard
  name: kubernetes-dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-dashboard
    spec:
      containers:
      - name: kubernetes-dashboard
        image: kubernetesui/dashboard:v2.0.0
        ports:
        - containerPort: 9090
          protocol: TCP
        args:
        - --namespace=default
        - --enable-insecure-login
        volumeMounts:
        # Create on-disk volume to store exec logs
        - mountPath: /tmp
          name: tmp-volume
        livenessProbe:
          httpGet:
            path: /
            port: 9090
          initialDelaySeconds: 30
          timeoutSeconds: 30
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsUser: 1001
          runAsGroup: 2001
      - name: proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v5.1.0-arm64
        args:
        - -http-address=:8080
        - -upstream=http://127.0.0.1:9090
        - -redirect-url=http://dashboard.k.squat.ai/oauth2/callback
        - -provider=oidc
        - -oidc-issuer-url=https://squat.eu.auth0.com/
        - -pass-authorization-header=true
        - -skip-provider-button=true
        - -client-id=$(CLIENT_ID)
        - -client-secret=$(CLIENT_SECRET)
        - -cookie-secret=$(COOKIE_SECRET)
        - -cookie-secure=false
        - -email-domain=*
        ports:
        - containerPort: 8080
          protocol: TCP
      volumes:
      - name: tmp-volume
        emptyDir: {}
      serviceAccountName: kubernetes-dashboard
      nodeSelector:
        "kubernetes.io/os": linux
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
