liao/manifests/matchbox.yaml
apiVersion: v1
kind: Service
metadata:
  name: matchbox
spec:
  type: ClusterIP
  selector:
    name: matchbox
    phase: prod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matchbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: matchbox
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: matchbox
    spec:
      hostNetwork: true
      containers:
      - name: matchbox
        image: squat/matchbox:arm64
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8081
        resources:
          requests:
            cpu: "50m"
            memory: "50Mi"
        volumeMounts:
        - name: config
          mountPath: /etc/matchbox
        - name: data
          mountPath: /var/lib/matchbox
        - name: assets
          mountPath: /var/lib/matchbox/assets
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        secret:
          secretName: matchbox-rpc
      - name: data
        emptyDir: {}
      - name: assets
        emptyDir: {}
