liao/manifests/mjpeg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mjpeg
  labels:
    app.kubernetes.io/name: mjpeg
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mjpeg
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mjpeg
    spec:
      containers:
      - name: kceu
        image: squat/kubeconeu2019
        imagePullPolicy: Always
        command:
        - /cam2ip
        args:
        - --bind-addr=:80
        ports:
        - containerPort: 80
          name: http
        resources:
          limits:
            squat.ai/video: 1
---
apiVersion: v1
kind: Service
metadata:
  name: mjpeg
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mjpeg.k.squat.ai
  labels:
    app.kubernetes.io/name: mjpeg
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: mjpeg
