liao/manifests/octoprint.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octoprint
  labels:
    app.kubernetes.io/name: octoprint
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: octoprint
  template:
    metadata:
      labels:
        app.kubernetes.io/name: octoprint
    spec:
      containers:
      - name: octoprint
        image:  nunofgs/octoprint:alpine
        imagePullPolicy: Always
        command:
        - /bin/sh
        - -c
        - --
        args:
        - cp /root/.octoprint/config.yaml.base /root/.octoprint/config.yaml;
          /usr/local/bin/octoprint serve --iknowwhatimdoing --host=0.0.0.0
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            squat.ai/serial: 1
        volumeMounts:
        - mountPath: /root/.octoprint/config.yaml.base
          name: config
          subPath: config.yaml
        - mountPath: /root/.octoprint/printerProfiles/_default.profile
          name: config
          subPath: _default.profile
        - mountPath: /root/.octoprint/plugins
          name: plugins
      volumes:
      - name: config
        configMap:
          name: octoprint
          items:
          - key: config.yaml
            path: config.yaml
          - key: _default.profile
            path: _default.profile
      - name: plugins
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: octoprint
  annotations:
    external-dns.alpha.kubernetes.io/hostname: octoprint.k.squat.ai
  labels:
    app.kubernetes.io/name: octoprint
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: octoprint
