liao/manifests/wg-gen-web.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: wg-gen-web.k.squat.ai
  labels:
    app.kubernetes.io/name: kilo-wg-gen-web
  name: kilo-wg-gen-web
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: kilo-wg-gen-web
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kilo-wg-gen-web
  labels:
    app.kubernetes.io/name: kilo-wg-gen-web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kilo-wg-gen-web
  serviceName: kilo-wg-gen-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kilo-wg-gen-web
    spec:
      containers:
      - image: squat/kilo-wg-gen-web
        name: kilo-wg-gen-web
        args:
        - --listen=:8081
        - --dir=/data
        ports:
        - containerPort: 8081
          name: metrics
        volumeMounts:
        - name: data
          mountPath: /data
      - image: vx3r/wg-gen-web
        name: wg-gen-web
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
      serviceAccountName: kilo-wg-gen-web
  volumeClaimTemplates:
  - metadata:
      labels:
        app.kubernetes.io/name: kilo-wg-gen-web
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
