liao/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mjpeg-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mjpeg
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.5.0.2/32
    - ipBlock:
        cidr: 10.5.0.4/32
